Move back to using ktfmt as a CLI library
This results in slowdown of ./gradlew ktCheck --rerun from 22s to 82s
as we end up creating a lot more classloaders.

https://ge.androidx.dev/s/6uo5wcowlhsay/performance/build
https://ge.androidx.dev/s/xa5e5cnnd54sw/performance/build

This is needed as a workaround for https://github.com/facebook/ktfmt/issues/495
so we can keep using old kotlin compiler for ktfmt as we upgrade to KGP
2.0.20

Test: ./gradlew ktCheck
Change-Id: I1220bbef9e679e67d4ab7e0afaf4d4f7be7678d3