@@ -19,21 +19,20 @@ package androidx.build
 import androidx.build.logging.TERMINAL_RED
 import androidx.build.logging.TERMINAL_RESET
 import androidx.build.uptodatedness.cacheEvenIfNoOutputs
-import com.facebook.ktfmt.format.Formatter
-import com.facebook.ktfmt.format.Formatter.format
+import java.io.ByteArrayOutputStream
 import java.io.File
 import java.nio.file.Paths
 import javax.inject.Inject
-import kotlinx.coroutines.Dispatchers
-import kotlinx.coroutines.async
-import kotlinx.coroutines.awaitAll
-import kotlinx.coroutines.coroutineScope
-import kotlinx.coroutines.runBlocking
 import org.gradle.api.DefaultTask
 import org.gradle.api.Project
+import org.gradle.api.attributes.java.TargetJvmEnvironment
+import org.gradle.api.attributes.java.TargetJvmEnvironment.TARGET_JVM_ENVIRONMENT_ATTRIBUTE
+import org.gradle.api.file.ConfigurableFileCollection
+import org.gradle.api.file.FileCollection
 import org.gradle.api.file.FileTree
 import org.gradle.api.model.ObjectFactory
 import org.gradle.api.tasks.CacheableTask
+import org.gradle.api.tasks.Classpath
 import org.gradle.api.tasks.Input
 import org.gradle.api.tasks.InputFiles
 import org.gradle.api.tasks.Internal
@@ -43,13 +42,18 @@ import org.gradle.api.tasks.PathSensitivity
 import org.gradle.api.tasks.SkipWhenEmpty
 import org.gradle.api.tasks.TaskAction
 import org.gradle.api.tasks.options.Option
-import org.intellij.lang.annotations.Language
+import org.gradle.kotlin.dsl.named
+import org.gradle.process.ExecOperations
 
 fun Project.configureKtfmt() {
-    tasks.register("ktFormat", KtfmtFormatTask::class.java)
+    val ktfmtClasspath = getKtfmtConfiguration()
+    tasks.register("ktFormat", KtfmtFormatTask::class.java) { task ->
+        task.ktfmtClasspath.from(ktfmtClasspath)
+    }
 
     val ktCheckTask =
         tasks.register("ktCheck", KtfmtCheckTask::class.java) { task ->
+            task.ktfmtClasspath.from(ktfmtClasspath)
             task.cacheEvenIfNoOutputs()
         }
 
@@ -71,11 +75,27 @@ private val ExcludedDirectories =
     )
 
 private val ExcludedDirectoryGlobs = ExcludedDirectories.map { "**/$it/**/*.kt" }
+private const val MainClass = "com.facebook.ktfmt.cli.Main"
 private const val InputDir = "src"
 private const val IncludedFiles = "**/*.kt"
 
+private fun Project.getKtfmtConfiguration(): FileCollection {
+    val conf = configurations.detachedConfiguration(dependencies.create(getLibraryByName("ktfmt")))
+    conf.attributes {
+        it.attribute(
+            TARGET_JVM_ENVIRONMENT_ATTRIBUTE,
+            project.objects.named(TargetJvmEnvironment.STANDARD_JVM)
+        )
+    }
+    return files(conf)
+}
+
 @CacheableTask
 abstract class BaseKtfmtTask : DefaultTask() {
+    @get:Inject abstract val execOperations: ExecOperations
+
+    @get:Classpath abstract val ktfmtClasspath: ConfigurableFileCollection
+
     @get:Inject abstract val objects: ObjectFactory
 
     @get:Internal val projectPath: String = project.path
@@ -107,53 +127,38 @@ abstract class BaseKtfmtTask : DefaultTask() {
 
     protected fun runKtfmt(format: Boolean) {
         if (getInputFiles().files.isEmpty()) return
-        runBlocking(Dispatchers.IO) {
-            val result = processInputFiles()
-            val incorrectlyFormatted = result.filter { !it.isCorrectlyFormatted }
-            if (incorrectlyFormatted.isNotEmpty()) {
-                if (format) {
-                    incorrectlyFormatted.forEach { it.input.writeText(it.formattedCode) }
-                } else {
-                    error(
-                        "Found ${incorrectlyFormatted.size} files that are not correctly " +
-                            "formatted:\n" +
-                            incorrectlyFormatted.map { it.input }.joinToString("\n") +
-                            """
-
-                ********************************************************************************
-                You can attempt to automatically fix these issues with:
-                ./gradlew $projectPath:ktFormat
-                ********************************************************************************
-                """
-                                .trimIndent()
-                    )
-                }
-            }
+        val outputStream = ByteArrayOutputStream()
+        execOperations.javaexec { javaExecSpec ->
+            javaExecSpec.standardOutput = outputStream
+            javaExecSpec.mainClass.set(MainClass)
+            javaExecSpec.classpath = ktfmtClasspath
+            javaExecSpec.args = getArgsList(format = format)
+            javaExecSpec.jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+            overrideDirectory?.let { javaExecSpec.workingDir = it }
+        }
+        val output = outputStream.toString()
+        if (output.isNotEmpty()) {
+            processOutput(output)
+        }
+        if (output.isNotEmpty()) {
+            error(processOutput(output))
         }
     }
 
-    /** Run ktfmt on all the files in [getInputFiles] in parallel. */
-    private suspend fun processInputFiles(): List<KtfmtResult> {
-        return coroutineScope { getInputFiles().files.map { async { processFile(it) } }.awaitAll() }
-    }
+    open fun processOutput(output: String): String =
+        """
+        Failed check for the following files:
+        $output
+    """
+            .trimIndent()
 
-    /** Run ktfmt on the [input] file. */
-    private fun processFile(input: File): KtfmtResult {
-        val originCode = input.readText()
-        val formattedCode = format(Formatter.KOTLINLANG_FORMAT, originCode)
-        return KtfmtResult(
-            input = input,
-            isCorrectlyFormatted = originCode == formattedCode,
-            formattedCode = formattedCode
-        )
+    private fun getArgsList(format: Boolean): List<String> {
+        val arguments = mutableListOf("--kotlinlang-style")
+        if (!format) arguments.add("--dry-run")
+        arguments.addAll(getInputFiles().files.map { it.absolutePath })
+        return arguments
     }
 }
-
-internal data class KtfmtResult(
-    val input: File,
-    val isCorrectlyFormatted: Boolean,
-    @Language("kotlin") val formattedCode: String,
-)
 
 @CacheableTask
 abstract class KtfmtFormatTask : BaseKtfmtTask() {
@@ -182,6 +187,18 @@ abstract class KtfmtCheckTask : BaseKtfmtTask() {
     fun runCheck() {
         runKtfmt(format = false)
     }
+
+    override fun processOutput(output: String): String =
+        """
+                Failed check for the following files:
+                $output
+
+                ********************************************************************************
+                ${TERMINAL_RED}You can automatically fix these issues with:
+                ./gradlew $projectPath:ktFormat$TERMINAL_RESET
+                ********************************************************************************
+            """
+            .trimIndent()
 }
 
 @CacheableTask
@@ -236,33 +253,35 @@ abstract class KtfmtCheckFileTask : BaseKtfmtTask() {
 
     @TaskAction
     fun runCheck() {
-        try {
-            runKtfmt(format = format)
-        } catch (e: IllegalStateException) {
-            val kotlinFiles =
-                files.filter { file ->
-                    val isKotlinFile = file.endsWith(".kt") || file.endsWith(".ktx")
-                    val inExcludedDir =
-                        Paths.get(file).any { subPath ->
-                            ExcludedDirectories.contains(subPath.toString())
-                        }
+        runKtfmt(format = format)
+    }
 
-                    isKotlinFile && !inExcludedDir
-                }
-            error(
-                """
+    override fun processOutput(output: String): String {
+        val kotlinFiles =
+            files.filter { file ->
+                val isKotlinFile = file.endsWith(".kt") || file.endsWith(".ktx")
+                val inExcludedDir =
+                    Paths.get(file).any { subPath ->
+                        ExcludedDirectories.contains(subPath.toString())
+                    }
 
-                ********************************************************************************
-                ${TERMINAL_RED}You can attempt to automatically fix these issues with:
-                ./gradlew :ktCheckFile --format ${kotlinFiles.joinToString(separator = " "){ "--file $it" }}$TERMINAL_RESET
-                ********************************************************************************
-                """
-                    .trimIndent()
-            )
-        }
+                isKotlinFile && !inExcludedDir
+            }
+        return """
+            Failed check for the following files:
+            $output
+
+            ********************************************************************************
+            ${TERMINAL_RED}You can attempt to automatically fix these issues with:
+            ./gradlew :ktCheckFile --format ${kotlinFiles.joinToString(separator = " "){ "--file $it" }}$TERMINAL_RESET
+            ********************************************************************************
+            """
+            .trimIndent()
     }
 }
 
 fun Project.configureKtfmtCheckFile() {
-    tasks.register("ktCheckFile", KtfmtCheckFileTask::class.java)
+    tasks.register("ktCheckFile", KtfmtCheckFileTask::class.java) { task ->
+        task.ktfmtClasspath.from(getKtfmtConfiguration())
+    }
 }
